--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,27 @@
   margin-bottom: 30px;
   overflow: hidden;
 }
-ul.nv,
+
+/* Side bar Naveen */
+
+.navbar-logo{
+  margin: 10px 20px;
+  margin-bottom: 40px;
+}
+
+.msb ul{
+  border-bottom: 1px solid red;
+}
+
+.msb li {
+  margin: .25em;
+  display: block;
+  position: relative;
+}
+
+/* End side bar */
+
+/* ul.nv,
 ul.ns {
   position: relative;
   padding: 0;
@@ -62,7 +82,7 @@ ul.ns {
   padding: 10px 25px;
   display: block;
   /* vertical-align: middle; */
-}
+/* }
 .nv li a .ic {
   font-size: 16px;
   margin-right: 5px;
@@ -71,7 +91,7 @@ ul.ns {
 }
 .nv .ns li a {
   padding: 10px 50px;
-}
+} */ */
 
 #Dashboard {
   margin-left: 200px;
@@ -212,8 +232,9 @@ body {
   padding: 0.7rem 0;
 }
 
-.btn-outline-secondary{
-  border-color: #dbd6d6;
+#msbo{
+  margin: -41px 184px;
+  position: absolute;
 }
 
 tr{
