--- a/css/style.css
+++ b/css/style.css
@@ -59,40 +59,6 @@
   position: relative;
 }
 
-/* End side bar */
-
-/* ul.nv,
-ul.ns {
-  position: relative;
-  padding: 0;
-  list-style: none;
-}
-
-.nv li {
-  display: block;
-  position: relative;
-}
-.nv li::before {
-  clear: both;
-  content: "";
-  display: table;
-}
-.nv li a {
-  color: #444;
-  padding: 10px 25px;
-  display: block;
-  /* vertical-align: middle; */
-/* }
-.nv li a .ic {
-  font-size: 16px;
-  margin-right: 5px;
-  font-weight: 300;
-  display: inline-block;
-}
-.nv .ns li a {
-  padding: 10px 50px;
-} */ */
-
 #Dashboard {
   margin-left: 200px;
   position: relative;
@@ -104,7 +70,6 @@ ul.ns {
   margin-left: 200px;
 }
 
-/* Vinoth */
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -241,7 +206,16 @@ tr{
   border-bottom: hidden;
 }
 
-/* Naveen Navbar */
+.project-list .number {
+  background: rgba(226, 10, 10, 0.17);
+  color: rgb(226, 10, 10) ;
+  padding: 7px;
+  margin: 2px;
+  border-radius: 2px;
+  font-size: small;
+  font-style: bold;
+  font-weight: 500;
+}
 
 body.msb-x .msb {
   margin-left: -200px;
