--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   overflow-y: auto;
   white-space: nowrap;
   height: 100%;
-  z-index: 1;
+  /*z-index: 1;*/
   border-right: 1px solid #ddd;
 }
 
@@ -43,15 +43,15 @@
 }
 
 /* Side bar Naveen */
-
+.navbar.navbar-default{
+  height: 100%;
+  align-content: space-between;
+}
 .navbar-logo{
   margin: 10px 20px;
   margin-bottom: 40px;
 }
 
-.msb ul{
-  border-bottom: 1px solid red;
-}
 
 .msb li {
   margin: .25em;
@@ -59,6 +59,13 @@
   position: relative;
 }
 
+.side-menu-container ul hr.sidebar-sep{
+  width: 14%;
+  margin: 14px;
+  border: 1.4px solid #ffffff8a;
+  border-radius: 25px;
+
+}
 #Dashboard {
   margin-left: 200px;
   position: relative;
@@ -200,6 +207,7 @@ body {
 #msbo{
   margin: -41px 184px;
   position: absolute;
+  transition: 0.8s linear;
 }
 
 tr{
@@ -209,14 +217,32 @@ tr{
 .project-list .number {
   background: rgba(226, 10, 10, 0.17);
   color: rgb(226, 10, 10) ;
-  padding: 7px;
-  margin: 2px;
-  border-radius: 2px;
-  font-size: small;
-  font-style: bold;
+  padding: 9px;
+  /* margin: 7px; */
+  border-radius: 5px;
+  font-size: medium;
   font-weight: 500;
+  min-width: 20%;
 }
-
+.project-list .number.number-secondary {
+  background:  rgba(var(--bs-secondary-rgb),0.2)!important;
+  color:  rgba(var(--bs-secondary-rgb))!important;
+}
+.project-list .number.number-primary {
+  background:  rgba(var(--bs-primary-rgb),0.2)!important;
+  color:  rgba(var(--bs-primary-rgb))!important;
+}
+.project-list .number.number-info {
+  background:  rgba(var(--bs-info-rgb),0.2)!important;
+  color:  rgba(var(--bs-info-rgb))!important;
+}
+.project-list .number.number-primary {
+  background:  rgba(var(--bs-primary-rgb),0.2)!important;
+  color:  rgba(var(--bs-primary-rgb))!important;
+}
+.project-list td{
+  vertical-align: middle;
+}
 body.msb-x .msb {
   margin-left: -200px;
   animation-duration: 1s;
@@ -229,6 +255,9 @@ body .msb {
   animation-name: slideout;
 }
 
+div#msb::-webkit-scrollbar {
+  width: 0px;
+}
 body.msb-x #Dashboard, body.msb-x #actions {
   margin-left: 0px;
   animation-duration: 1s;
@@ -241,7 +270,15 @@ body #Dashboard, body #actions {
   animation-name: slideout1;
 }
 
-
+body.msb-x .msbo a {
+  transform: rotate(180deg);
+  margin: -41px -10px !important;
+}
+body .msbo a .side-pane-icon{
+  color: #ecbf41;
+  background-color: white;
+  border-radius: 31px;
+}
 @keyframes slidein {
   from {
     margin-left: 0px;
@@ -287,4 +324,24 @@ body #Dashboard, body #actions {
   .btn {
     font-size: small;
   }
+}
+
+.fa-1_5x{
+  font-size: 1.5em;
+  width: 15%
+}
+i.fa-white{
+  color: white;
+}
+.side-menu-container.h-100{
+  height: 80% !important;
+}
+
+div.rowWrapper{
+  display: grid;
+  grid-template-columns: 0.3fr minmax(136px, 280px) 1fr;
+  grid-row-gap: 2em ;
+  grid-column-gap: 2em ;
+  margin-bottom: 1em;
+  padding: 0.5em;
 }
